tests/ui/ffi_pure.stderr
error[E0755]: `#[ffi_pure]` may only be used on foreign functions
  --> $DIR/ffi_pure.rs:4:1
   |
LL | #[ffi_pure]
   | ^^^^^^^^^^^

error[E0755]: `#[ffi_pure]` may only be used on foreign functions
  --> $DIR/ffi_pure.rs:7:1
   |
LL | #[ffi_pure]
   | ^^^^^^^^^^^

error[E0755]: `#[ffi_pure]` may only be used on foreign functions
  --> $DIR/ffi_pure.rs:13:5
   |
LL |     #[ffi_pure]
   |     ^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0755`.
